# rotary_states

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
calculation_python/: README.md  __init__.py  pyproject.toml
calculation_python/examples/: custom_integrator.py  limit_cyrcle.py  newton.py  odeint.py  rh_sides.py
calculation_python/src/: __init__.py
calculation_python/src/integrators/: RK4.py  __init__.py
calculation_python/src/optimizers/: newton.py
calculation_python/tests/: perfomance-test-01.py  perfomance_test_01.sh  test-deps.py  test_deps.py  test_newton.py  test_perfomance_01.py
examples/: custom_integrator.py  limit_cycle.py  limit_cyrcle.py  newton.py  odeint.py  rh_sides.py
rotary_states/src/optimizers/: __init__.py  newton.py
src/integrators/: RK4.py
src/limit_cycles/: __init__.py  main_method.py
src/optimizers/: newton.py
tests/: __init__.py  test_newton.py
tests/test_limit_cycle_one/: limit_cycle.py  refer_stdout.txt  rh_sides.py  test_limit_cycle.py
unn_ds/: __init__.py
unn_ds/src/: __init__.py
unn_ds/src/integrators/: RK4.py  jit_RK4.py
unn_ds/src/limit_cycles/: __init__.py  jit_main_method.py  main_method.py
unn_ds/src/optimizers/: jit_newton.py  newton.py
unn_ds/src/utils/: do_jit.py
