[tool.poetry]
name = "rotary_states"
version = "0.1.1"
description = "The minimalistic framework for finding rotational states"
authors = ["Dmitry Khorkin <dmitryhorkin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
scipy = "^1.7.3"
numpy = ">=1.18,<1.22"
numba = "^0.55.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
