[tool.poetry]
name = "calculation"
version = "0.1.0"
description = ""
authors = ["DimaAmega <dima.amega1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
scipy = "^1.7.3"
numpy = ">=1.18,<1.22"
numba = "^0.55.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
